# jimeng-free-tool-cli

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
src/: jimeng_api.py  jimeng_client.py  main.py  utils.py
